--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <head>
   
       <title>twitter bootstrap 2 review</title>
+      
+      <link rel="stylesheet" type="text/css" href="bootstrap.css">
 
   </head>
 
