--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
   <body>
   
+      <div class="hero-unit">
+  
       <h1>twitter bootstrap 2 review</h1>
+      
+      <p>this is a simple review of twitter bootstrap</p>
+      
+      <p><a class="btn btn-primary btn-large">look,kyi.a button!</a></p>
 
   </body>
 
